--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --primary: #274494;
+  --primary: #222222;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-/* 
-@media (prefers-color-scheme: dark) {
+ 
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-} */ 
+}  */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -55,7 +55,7 @@ body {
 }
 
 .btn-secondary {
-  @apply bg-gray-300 hover:bg-gray-400 text-black py-2 px-4 rounded transition-all;
+  @apply bg-gray-300 hover:bg-gray-600 text-black py-2 px-4 rounded transition-all;
 }
 
 .btn-disabled {
